# friendflix

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yml  example.env
.github/: dependabot.yml
.github/workflows/: python_tests.yml  react_tests.yml
backend/: .dockerignore  Dockerfile  example.env  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tmdb.py  user_actions.py
backend/db/: __init__.py  db.py  examples.sql  schema.drawio  schema.sql  user.py  user_actions.py
backend/models/: auth.py  user.py
backend/tests/: mock_tmdb.py  test_auth.py  test_flask.py  test_movies.py  test_user_actions.py
backend/tests/data/: infinity_war.json  movies_by_revenue.json
backend/views/: __init__.py  auth.py  movies.py  user.py  user_actions.py
db/: db.py  schema.drawio  schema.sql
developers/: shai.txt  x = [1, 2, 3].py
frontend/: .env.production  .eslintrc.cjs  .gitignore  Dockerfile  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  MovieCard.tsx  MoviePage.tsx  Typs.tsx  backend.ts  card.css  index.css  lastMovieCtx.tsx  tmdb.ts  types.ts  user.ts
frontend/src/components/: ActorCard.css  ActorCard.tsx  ErrorBoundary.tsx  MovieCard.css  MovieCard.tsx  NavBar.css  NavBar.tsx  UserActionCountPanel.tsx  ValidatedInput.tsx
frontend/src/pages/: Login.tsx  MovieList.css  MovieList.tsx  MoviePage.css  MoviePage.tsx  Register.css  Register.tsx  RegisterLogin.css  UserPage.tsx
frontend/tests/: MovieList.test.tsx  Register.test.tsx  setup.ts
